增加首页并美化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CMS</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+	<title>CMS</title>
+	<%= stylesheet_link_tag    "application", :media => "all" %>
+	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
+	<%= render 'layouts/shim' %>
 </head>
 <body>
+	<%= render 'layouts/header' %>
+        <div class="container">
+            <!-- 用户信息提示 -->
+            <% flash.each do |key, value| %>
+                <div class="alert alert-<%= key %>"><%= value %></div>
+            <% end %>
 
-<%= yield %>
+            <%= yield %>
 
+            <%= render 'layouts/footer' %>
+        </div>
 </body>
 </html>
