--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,8 @@
                 <ul class="nav pull-right">
                     <li><%= link_to "首页",    root_path %></li>
                     <li><%= link_to "帮助",    '#' %></li>
-                    <li><%= link_to "登录",    '#' %></li>
+                    <li><%= link_to "注册",    new_user_path %></li>
+                    <li><%= link_to "登录",    signin_path %></li>
                     <li><%= link_to "发布信息", new_post_path %></li>
                 </ul>
             </nav>
