--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,13 @@
                 <ul class="nav pull-right">
                     <li><%= link_to "首页",    root_path %></li>
                     <li><%= link_to "帮助",    '#' %></li>
-                    <li><%= link_to "注册",    new_user_path %></li>
-                    <li><%= link_to "登录",    signin_path %></li>
-                    <li><%= link_to "发布信息", new_post_path %></li>
+                    <% if signed_in? %>
+                        <li><%= link_to "发布信息", new_post_path %></li>
+                        <li><%= link_to "退出", signout_path, method: "delete" %></li>
+                    <% else %>
+                        <li><%= link_to "注册",    new_user_path %></li>
+                        <li><%= link_to "登录",    signin_path %></li>
+                    <% end %>
                 </ul>
             </nav>
         </div>
