只有admin才可以发布信息

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,10 @@
-<% @posts.each do |post| %>
-	<%= link_to post.title, post %>  </br>
-	<%= post.content %>
+<% if signed_in? %>
+	<% @posts.each do |post| %>
+		<%= link_to post.title, post %> </br>
+		<%= post.content %>
+	<% end %>
+<% else %>
+	<h1>登陆后才可以浏览文章哟！</h1>
+	<p><%= link_to "登录",    signin_path %></p>
+	<p>没有帐号？ <%= link_to "立即注册", signup_path %></p>
 <% end %>
