--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
                     <li><%= link_to "首页",    root_path %></li>
                     <li><%= link_to "帮助",    '#' %></li>
                     <% if signed_in? %>
+                        <li><%= link_to "文章", posts_path %></li>
                         <li><%= link_to "发布信息", new_post_path %></li>
                         <li><%= link_to "退出", signout_path, method: "delete" %></li>
                     <% else %>
